--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,14 @@
     },
     "require": {
         "phpmailer/phpmailer": "^6.0",
-        "phpunit/phpunit": "^7.5",
+        
        "squizlabs/php_codesniffer": "^3.3",
         "monolog/monolog": "^1.24"
         
         
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.5"
     },
     "authors": [
         {
