--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     ],
     "autoload": { 
          "psr-4": {
-            "Digitalmx\\Lib\\": "libmx/libphp"  
-            
+            "Digitalmx\\Lib\\": "libmx/libphp" , 
+	   "Digitalmx\\flames\\": "code/"            
             } 
         ,
         "files": [
