--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "phpmailer/phpmailer": "^6.0",
         
        "squizlabs/php_codesniffer": "^3.3",
-        "monolog/monolog": "^1.24"
+        "monolog/monolog": "^1.24",
+        "twig/twig": "^2.11"
         
         
     },
