--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,12 @@
     },
     "require": {
         "phpmailer/phpmailer": "^6.0",
-        
-       "squizlabs/php_codesniffer": "^3.3",
+	"twig/twig": "^2.5",
         "monolog/monolog": "^1.24"
-        
         
     },
     "require-dev": {
+	"squizlabs/php_codesniffer": "^3.3",
         "phpunit/phpunit": "^7.5"
     },
     "authors": [
