--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "require": {
         "phpmailer/phpmailer": "^6.0",
 	"twig/twig": "^2.5",
-        "monolog/monolog": "^1.24"
+        "monolog/monolog": "^1.24",
+        "pimple/pimple": "^3.2"
         
     },
     "require-dev": {
