--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "phpmailer/phpmailer": "^6.0",
 	"twig/twig": "^2.5",
         "monolog/monolog": "^1.24",
-        "pimple/pimple": "^3.2"
+        "pimple/pimple": "^3.2",
+        "davefx/phplot": "^6.2"
         
     },
     "require-dev": {
