--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     ],
     "autoload": { 
          "psr-4": {
-            "Digitalmx\\Lib\\": "libdmx/"  
+            "Digitalmx\\": "libdmx/"  
             
             } 
         ,
