--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "autoload": { 
          "psr-4": {
             "digitalmx\\": "libmx/" ,
-            "digitalmx\\flames\\" : ["src","code","lib"]
+            "digitalmx\\flames\\" : ["src/","code/","lib/"]
             
             } 
       } 
