--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ data/
 #don't alter normally
 
 #news directory contains live info.  Don't disturb
+#also on local machine these are owned by _www
 public/news/news_latest/
 public/news/news_next/
 
