--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,4 @@ latest_pointer.txt
 #also on local machine these are owned by _www
 public/news/news_latest/
 public/news/news_next/
-
+public/news/news_live/
