--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,9 @@
     "autoload": { 
          "psr-4": {
             "digitalmx\\": "libmx/" ,
-            "digitalmx\\flames\\" : ["src/","config/"]
+            "digitalmx\\flames\\" : ["src/","config/","var/"]
             
+	  
             } 
       } 
 }
