--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "license": "proprietary",
     "config": {  
-            "vendor-dir": "./vendor"
+            "vendor-dir": "vendor"
     },
     "require": {
         "phpmailer/phpmailer": "^6.0",
@@ -27,9 +27,9 @@
     "autoload": { 
          "psr-4": {
             "digitalmx\\": "libmx/" ,
-            "digitalmx\\flames\\" : ["src/","config/"]
+            "digitalmx\\flames\\" : ["src/","config"]
             
-	  
-            } 
+            }
+            
       } 
 }
