--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 	"twig/twig": "^2.5",
         "monolog/monolog": "^1.24",
         "pimple/pimple": "^3.2",
-        "davefx/phplot": "^6.2"
+        "davefx/phplot": "^6.2",
+        "league/plates": "^3.3"
 
     },
     "require-dev": {
