--- a/config/config.ini
+++ b/config/config.ini
@@ -23,12 +23,12 @@
 
 ;production copy on mac
 
-[ayebook-production]
-DB_SERVER = "localhost"   
-	DB_USER = "admin"        
-	DB_PASSWORD = "milstd883"     
-	DB_NAME = "f2"
-	DB_CHAR = "utf8mb4" 
+; [ayebook-production]
+; DB_SERVER = "localhost"   
+; 	DB_USER = "admin"        
+; 	DB_PASSWORD = "milstd883"     
+; 	DB_NAME = "f2"
+; 	DB_CHAR = "utf8mb4" 
 
 
 ;dev db on mac
@@ -36,7 +36,7 @@ DB_SERVER = "localhost"
 DB_SERVER = "localhost"   
 	DB_USER = "admin"        
 	DB_PASSWORD = "milstd883"     
-	DB_NAME = "f2dev"
+	DB_NAME = "f2"
 	DB_CHAR = "utf8mb4" 
 
 [site]
