--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,11 +1,12 @@
 ErrorDocument 403 /403.html
 ErrorDocument 404 /404.html
 
-DirectoryIndex index.html index-down.php  index.php 
+DirectoryIndex index.html index-down.php  index.php
 
 Options +FollowSymLinks
 Options -Indexes
 
-RewriteEngine on
-RewriteRule ^view_asset/([0-9]+)$ /scripts/asset_c.php?id=$1 [L]
+# RewriteEngine on
+# RewriteRule ^view_asset/([0-9]+)$ /scripts/asset_c.php?id=$1 [L]
+
 
