--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,7 +6,7 @@ DirectoryIndex index.html index-down.php  index.php
 Options +FollowSymLinks
 Options -Indexes
 
-# RewriteEngine on
+ RewriteEngine on
 # RewriteRule ^view_asset/([0-9]+)$ /scripts/asset_c.php?id=$1 [L]
-
+RewriteRule scripts/news_article_c.php?id=([0-9]+) /get-article.php?$1 [L]
 
