--- a/public/.htaccess
+++ b/public/.htaccess
@@ -10,3 +10,9 @@ Options -Indexes
 # RewriteRule ^view_asset/([0-9]+)$ /scripts/asset_c.php?id=$1 [L]
 RewriteRule scripts/news_article_c.php?id=([0-9]+) /get-article.php?$1 [L]
 
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteRule ^.*$ /developer/htaccess_tester.php
+</IfModule>
+
+
