--- a/public/.htaccess
+++ b/public/.htaccess
@@ -8,8 +8,8 @@ Options -Indexes
 
 
  <IfModule mod_rewrite.c>
-#     RewriteEngine On
-#     RewriteRule ^.*$ /developer/htaccess_tester.php
+     RewriteEngine On
+     RewriteRule ^.*$ /developer/htaccess_tester.php
 #     RewriteRule scripts/news_article_c.php?id=([0-9]+) /get-article.php?$1 [L]
  </IfModule>
 
