--- a/public/.htaccess
+++ b/public/.htaccess
@@ -9,7 +9,7 @@ Options -Indexes
 
  <IfModule mod_rewrite.c>
      RewriteEngine On
-     RewriteRule ^.*$ /developer/htaccess_tester.php
+     RewriteRule ^test$ /developer/htaccess_tester.php
 #     RewriteRule scripts/news_article_c.php?id=([0-9]+) /get-article.php?$1 [L]
  </IfModule>
 
