--- a/public/.htaccess
+++ b/public/.htaccess
@@ -10,7 +10,7 @@ Options -Indexes
  <IfModule mod_rewrite.c>
      RewriteEngine On
      RewriteRule ^test$ /developer/htaccess_tester.php
-#     RewriteRule scripts/news_article_c.php?id=([0-9]+) /get-article.php?$1 [L]
+     RewriteRule scripts/news_article_c.php?id=([0-9]+) /get-article.php?$1 [L]
  </IfModule>
 
 
