--- a/public/.htaccess
+++ b/public/.htaccess
@@ -10,7 +10,7 @@ Options -Indexes
  <IfModule mod_rewrite.c>
      RewriteEngine On
      RewriteRule ^test2$ /developer/htaccess_tester.php
-     RewriteRule ^scripts/news_article_c.php /get-article.php [L]
+     RewriteRule ^scripts/news_article_c.php$ /get-article.php [L]
  </IfModule>
 
 
