--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "monolog/monolog": "^1.24",
         "pimple/pimple": "^3.2",
         "davefx/phplot": "^6.2",
-        "league/plates": "^3.3"
+        "league/plates": "^3.3",
+        "swiftmailer/swiftmailer": "^6.0"
 
     },
     "require-dev": {
