save before changing pdoPrep to prepPDO (resaved to fix errors in MxUtils)

--- a/config/db.ini
+++ b/config/db.ini
@@ -54,6 +54,13 @@
 DB_SERVER = "localhost"
 	DB_USER = "admin"
 	DB_PASSWORD = "milstd883"
+	DB_NAME = "f2dev"
+	DB_CHAR = "utf8mb4"
+
+[ayebook-production]
+DB_SERVER = "localhost"
+	DB_USER = "admin"
+	DB_PASSWORD = "milstd883"
 	DB_NAME = "f2"
 	DB_CHAR = "utf8mb4"
 
