--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,9 @@ test.php
 ~*
 
 #ignore asset files
-public/assets
-public/newsp
-public/thumbnails
+public/assets/
+public/newsp/
+public/thumbnails/
 
 
 #ignore vendor directory - will be reconstruted on site
@@ -35,8 +35,8 @@ unused/
 
 
 #files conaining live data
-public/news/current
-public/news/next
+public/news/current/
+public/news/next/
 public/news/latest
 
 var/
